tests/snapshots/yaml_suite_snapshots__yaml_suite_4MUZ_full.snap
---
source: tests/yaml_suite_snapshots.rs
expression: full
---
- name: Flow mapping colon on line after key
  from: "@ingydotnet"
  tags: flow mapping
  yaml: "{\"foo\"\n: \"bar\"}\n"
  tree: "+STR\n +DOC\n  +MAP {}\n   =VAL \"foo\n   =VAL \"bar\n  -MAP\n -DOC\n-STR\n"
  json: "{\n  \"foo\": \"bar\"\n}\n"
  emit: "\"foo\": \"bar\"\n"
- yaml: "{\"foo\"\n: bar}\n"
  tree: "+STR\n +DOC\n  +MAP {}\n   =VAL \"foo\n   =VAL :bar\n  -MAP\n -DOC\n-STR\n"
  emit: "\"foo\": bar\n"
- yaml: "{foo\n: bar}\n"
  tree: "+STR\n +DOC\n  +MAP {}\n   =VAL :foo\n   =VAL :bar\n  -MAP\n -DOC\n-STR\n"
  json: "{\n  \"foo\": \"bar\"\n}\n"
  emit: "foo: bar\n"
