tests/snapshots/yaml_suite_snapshots__yaml_suite_4MUZ_tight.snap
---
source: tests/yaml_suite_snapshots.rs
expression: tight
---
- emit: "\"foo\": \"bar\"\n"
  from: "@ingydotnet"
  json: "{\n  \"foo\": \"bar\"\n}\n"
  name: Flow mapping colon on line after key
  tags: flow mapping
  tree: "+STR\n +DOC\n  +MAP {}\n   =VAL \"foo\n   =VAL \"bar\n  -MAP\n -DOC\n-STR\n"
  yaml: "{\"foo\"\n: \"bar\"}\n"
- emit: "\"foo\": bar\n"
  tree: "+STR\n +DOC\n  +MAP {}\n   =VAL \"foo\n   =VAL :bar\n  -MAP\n -DOC\n-STR\n"
  yaml: "{\"foo\"\n: bar}\n"
- emit: "foo: bar\n"
  json: "{\n  \"foo\": \"bar\"\n}\n"
  tree: "+STR\n +DOC\n  +MAP {}\n   =VAL :foo\n   =VAL :bar\n  -MAP\n -DOC\n-STR\n"
  yaml: "{foo\n: bar}\n"
