tests/snapshots/yaml_suite_snapshots__yaml_suite_4Q9F_med.snap
---
source: tests/yaml_suite_snapshots.rs
expression: med
---
- name: "Folded Block Scalar [1.3]"
  from: "TS54, modified for YAML 1.3"
  tags: folded scalar 1.3-mod whitespace
  yaml: "--- >\n ab\n cd\n␣\n ef\n\n\n gh\n"
  tree: "+STR\n +DOC ---\n  =VAL >ab cd\\nef\\n\\ngh\\n\n -DOC\n-STR\n"
  json: "\"ab cd\\nef\\n\\ngh\\n\"\n"
  dump: "--- >\n  ab cd\n\n  ef\n\n\n  gh\n"
