tests/snapshots/yaml_suite_snapshots__yaml_suite_4QFQ_tight.snap
---
source: tests/yaml_suite_snapshots.rs
expression: tight
---
- emit: "- |\n  detected\n- >2\n\n\n  # detected\n- |2\n   explicit\n- >\n  detected\n"
  from: "R4YG, modified for YAML 1.3"
  json: "[\n  \"detected\\n\",\n  \"\\n\\n# detected\\n\",\n  \" explicit\\n\",\n  \"detected\\n\"\n]\n"
  name: "Spec Example 8.2. Block Indentation Indicator [1.3]"
  tags: spec literal folded scalar libyaml-err 1.3-mod whitespace
  tree: "+STR\n +DOC\n  +SEQ\n   =VAL |detected\\n\n   =VAL >\\n\\n# detected\\n\n   =VAL | explicit\\n\n   =VAL >detected\\n\n  -SEQ\n -DOC\n-STR\n"
  yaml: "- |\n detected\n- >\n␣\n␣␣\n  # detected\n- |1\n  explicit\n- >\n detected\n"
