tests/snapshots/yaml_suite_snapshots__yaml_suite_4RWC_full.snap
---
source: tests/yaml_suite_snapshots.rs
expression: full
---
- name: Trailing spaces after flow collection
  tags: flow whitespace
  from: "@ingydotnet"
  yaml: "  [1, 2, 3]␣␣\n␣␣∎\n"
  tree: "+STR\n +DOC\n  +SEQ []\n   =VAL :1\n   =VAL :2\n   =VAL :3\n  -SEQ\n -DOC\n-STR\n"
  json: "[\n  1,\n  2,\n  3\n]\n"
  dump: "- 1\n- 2\n- 3\n"
